<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.11"
        android:gravity="center|right"
        android:maxLength="20" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.11"
        android:ems="10"
        android:gravity="center|right"
        android:hint="@string/zero"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.13"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/msBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/mem_btn"
            android:text="@string/ms"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mrBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/mem_btn"
            android:text="@string/mr"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mplusBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/mem_btn"
            android:text="@string/mplus"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mminusBTn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/mem_btn"
            android:text="@string/mminus"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mcBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/mem_btn"
            android:text="@string/mc"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.13"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/c_btn"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bracketBtn2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/op_btn"
            android:text="@string/bracket1"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bracketBtn1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/op_btn"
            android:text="@string/bracket2"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/divBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/op_btn"
            android:text="@string/div"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.13"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sevenBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/eightBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/multBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/op_btn"
            android:text="@string/mult"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.13"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sixBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/minusBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/op_btn"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.13"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/twoBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/threeBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/plusBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/op_btn"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0.13"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zeroBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/dotBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/delBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/num_btn"
            android:backgroundTint="#3F51B5"
            android:text="@string/del"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/equalBtn"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.25"
            android:background="@drawable/equal_btn"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>